# nanoAgent

./: .gitignore  README.md  config.yaml  config.yaml.example  pyproject.toml
nanoAgent-crewai/: .gitignore  README.md  config.yaml.example  pyproject.toml
nanoAgent-crewai/src/nano_agent_crewai/: __init__.py  cli.py  config.py
nanoAgent-crewai/src/nano_agent_crewai/core/: __init__.py  crew_agent.py
nanoAgent-crewai/src/nano_agent_crewai/memory/: __init__.py
nanoAgent-crewai/src/nano_agent_crewai/tools/: __init__.py  llm_openai_compat.py  shell_guard.py  tavily_search.py
nanoAgent-crewai/src/nano_agent_crewai/utils/: retry.py
nanoAgent-langchain/: .env.example  README.md  pyproject.toml
nanoAgent-langchain/src/nano_agent_langchain/: __init__.py  cli.py  config.py
nanoAgent-langchain/src/nano_agent_langchain/core/: __init__.py  agent.py
nanoAgent-langchain/src/nano_agent_langchain/tools/: __init__.py  shell_guard.py  tavily_search.py
nanoAgent-langgraph/: .gitignore  README.md  pyproject.toml
nanoAgent-langgraph/src/nano_agent_langgraph/: __init__.py  cli.py  config.py
nanoAgent-langgraph/src/nano_agent_langgraph/core/: __init__.py  graph_agent.py
nanoAgent-langgraph/src/nano_agent_langgraph/tools/: __init__.py  llm_openai_compat.py  tavily_search.py
sessions/: allow_python_c_test.md  auto_retry_test.md  auto_retry_test2.md  auto_retry_test3.md  concise_test.md  demo.md  demo2.md  demo3.md  demo5.md  demo_fix.md  perf_new.md  smoke_test.md  ux_progress_test.md
src/nano_agent/: __init__.py  cli.py  config.py
src/nano_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nano_agent/core/: agent.py
src/nano_agent/memory/: session_store.py
src/nano_agent/tools/: llm_openai_compat.py  shell_guard.py  tavily_search.py
src/nano_agent/utils/: __init__.py
